--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.lzy.net:okgo:3.0.4'
+    implementation "com.lzy.widget:imagepicker:0.5.5"
+    implementation "com.github.bumptech.glide:glide:3.7.0"//load image
+    implementation "com.google.code.gson:gson:2.8.5"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
