--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
     //implementation "com.github.zzz40500:android-shapeLoadingView:1.0.3.2"
+    implementation 'com.github.zhpanvip:BannerViewPager:3.5.0'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.aliyun.dpa:oss-android-sdk:2.9.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
